samples/_failures_safe/1761391538_26701d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b61cdf18.c: In function ‘main’:
./samples/SAFE/__tmp_b61cdf18.c:152:9: error: ‘add’ undeclared (first use in this function)
  152 |         add
      |         ^~~
./samples/SAFE/__tmp_b61cdf18.c:152:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_b61cdf18.c:152:12: error: expected ‘;’ at end of input
  152 |         add
      |            ^
      |            ;
./samples/SAFE/__tmp_b61cdf18.c:152:9: error: expected declaration or statement at end of input
  152 |         add
      |         ^~~
./samples/SAFE/__tmp_b61cdf18.c:152:9: error: expected declaration or statement at end of input
